# jsonschema-benchmark

./: .editorconfig  .gitignore  Makefile  README.md  calc_opt.py  dataset_summary.sh  dataset_summary_table.sh  memory-wrapper.sh  package.json  plot.py  plot_all.py  plot_compile.py  plot_memory.py  plot_opt.py  pyproject.toml  report.sh  result_table.py  test_hash.py
.github/: csv_md.py  csv_min.py  dataset_summary_table.sh  list-implementations.sh  plot_markdown.py
.github/workflows/: ci.yml
implementations/ajv/: Dockerfile  main.js  main.mjs  package-lock.json  version.sh
implementations/ajv-bun/: .gitignore  Dockerfile  bun.lockb  package.json
implementations/blaze/: CMakeLists.txt  Dockerfile  main.cc  version.sh
implementations/blaze-nodejs/: Dockerfile  main.mjs  version.sh
implementations/boon/: Cargo.toml  Dockerfile  version.sh
implementations/corvus/: Dockerfile  Program.cs  bench.csproj  generate-and-run.sh  version.sh
implementations/go-jsonschema/: Dockerfile  go.mod  main.go  version.sh
implementations/harrel-json-schema/: settings.gradle.kts  version.sh
implementations/hyperjump/: Dockerfile  main.mjs  package-lock.json  package.json  version.sh
implementations/jmc/: .gitignore  Dockerfile  Makefile  README.md  generate-and-run.sh  jmc_version.sh  version.sh
implementations/jmc-js/: README.md  version.sh
implementations/jmc-pl/: README.md  version.sh
implementations/jmc-py/: README.md  version.sh
implementations/jsdotnet/: Dockerfile  Program.cs  version.sh
implementations/json_schemer/: Dockerfile  Gemfile  main.rb  version.sh
implementations/jsoncons/: CMakeLists.txt  Dockerfile  main.cc  vcpkg.json  version.sh
implementations/jsonschema/: version.sh
implementations/jsonschemadotnet/: Dockerfile  bench.csproj  version.sh
implementations/jsontoolkit/: CMakeLists.txt  Dockerfile  main.cc  version.sh
implementations/jsontoolkit-gcc/: Dockerfile
implementations/jsontoolkit-llvm/: Dockerfile  main.cc  version.sh
implementations/jsontoolkit-nodejs/: Dockerfile  main.mjs  version.sh
implementations/jsu-c/: Dockerfile  README.md  benchmark.sh  generate-and-run.sh  jsonschema_benchmark.c  jsu_version.sh  version.sh
implementations/jsu-java/: Dockerfile  JsonSchemaBenchmark.java  benchmark.sh  generate-and-run.sh  version.sh
implementations/jsu-js/: Dockerfile  README.md  benchmark.sh  jsonschema_benchmark.js  jsu_version.sh  version.sh
implementations/jsu-pl/: .benchmark-ignore  Dockerfile  README.md  benchmark.sh  jsonschema_benchmark.pl  version.sh
implementations/jsu-py/: Dockerfile  README.md  benchmark.sh  jsonschema_benchmark.py  version.sh
implementations/jsv/: Dockerfile  benchmark.exs  mix.exs  version.sh
implementations/kmp/: Dockerfile  version.sh
implementations/kmp-json-schema-validator/: Dockerfile  run.sh  settings.gradle.kts
implementations/mjs/: Benchmark.scala  Dockerfile  build.sbt  version.sh
implementations/networknt/: Dockerfile  run.sh  version.sh
implementations/openapiprocessor/: run.sh  version.sh
implementations/opis/: Dockerfile  composer.json  main.php  version.sh
implementations/py-jsonschema/: Dockerfile  version.sh
implementations/python-jsonschema/: Dockerfile  pyproject.toml  validate.py  version.sh
implementations/schemasafe/: Dockerfile  main.mjs  package-lock.json  package.json
schemas/ansible-meta/: instances.jsonl  schema.json
schemas/aws-cdk/: instances.jsonl  schema.json
schemas/babelrc/: instances.jsonl  schema.json
schemas/citation-file-format/: instances.jsonl  schema.json
schemas/clang-format/: instances.jsonl  schema.json
schemas/cmake-presets/: instances.jsonl  (+1 more)
(+80 files in other folders)
