cmake_minimum_required(VERSION 3.16)
project(blaze_benchmark)
include(/app/repo/vendor/core/cmake/Sourcemeta.cmake)
sourcemeta_enable_simd()
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -mtune=native")
add_subdirectory(/app/repo blaze)
add_executable(blaze_benchmark main.cc)
sourcemeta_add_default_options(PRIVATE blaze_benchmark)
target_link_libraries(blaze_benchmark PRIVATE sourcemeta::core::io)
target_link_libraries(blaze_benchmark PRIVATE sourcemeta::core::json)
target_link_libraries(blaze_benchmark PRIVATE sourcemeta::core::jsonl)
target_link_libraries(blaze_benchmark PRIVATE sourcemeta::core::jsonschema)
target_link_libraries(blaze_benchmark PRIVATE sourcemeta::blaze::compiler)
target_link_libraries(blaze_benchmark PRIVATE sourcemeta::blaze::evaluator)
