cmake_minimum_required(VERSION 3.16)
project(jsontoolkit_benchmark)
include(/app/repo/vendor/noa/cmake/noa.cmake)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
add_subdirectory(/app/repo jsontoolkit)
add_executable(jsontoolkit_benchmark main.cc)
noa_add_default_options(PRIVATE jsontoolkit_benchmark)
target_link_libraries(jsontoolkit_benchmark PRIVATE sourcemeta::jsontoolkit::json)
target_link_libraries(jsontoolkit_benchmark PRIVATE sourcemeta::jsontoolkit::jsonl)
target_link_libraries(jsontoolkit_benchmark PRIVATE sourcemeta::jsontoolkit::jsonschema)
